ajustes-jogo-memoria

--- a/pages/game.html
+++ b/pages/game.html
@@ -21,7 +21,7 @@
 
         <header>
             <span class="player"></span>
-            <span>Tempo: <span class="timer">00</span></span>
+            <span class="timer-bg">Tempo: <span class="timer">00</span></span>
         </header>
 
         
